@@ -1,4 +1,6 @@
 0.3.0
+Done search gtkqt5 documentation.
+Done built in docviewer, (mostly).
 Search for define now tries case sensitive then insensitive.
 Done search for define.
 Done open include.
